# deorg-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  nest-cli.json  package-lock.json  package.json  tsconfig.json
deorg-voting-program/: Anchor.toml  README.md  business-rules.md  gibwork_voting_program.json  gibwork_voting_program.ts  package-lock.json  package.json  task-withdrawal-implementation.md  vault-tasks-requirements.md  vault-tasks-testing.md
deorg-voting-program/programs/gibwork-voting-program/: Cargo.toml
deorg-voting-program/programs/gibwork-voting-program/src/: contributor.rs  errors.rs  lib.rs  organization.rs  project.rs  state.rs  task.rs  treasury.rs  utils.rs
deorg-voting-program/tests/: deorg-voting-program.ts
src/: application.module.ts  main.ts
src/core/: core.module.ts  service-provider.ts
src/core/config/: index.ts
src/core/controllers/: health.controller.ts
src/core/decorators/: paginate.decorator.ts  types.ts
src/core/errors/: InsufficientFundsError.ts  errorCodes.ts
src/core/guards/: auth.guard.ts
src/core/infra/: infra.module.ts
src/core/pagination/: paginated-data.ts  paginated.dto.ts  types.ts
src/core/repositories/: repository.ts  types.ts
src/core/swagger/: swagger.response.ts  types.ts
src/domains/: domain.module.ts
src/domains/auth/: auth.provider.ts
src/domains/gateway/: socket.gateway.ts  socket.provider.ts
src/domains/tasks/: tasks.provider.ts
src/utils/: calculate-fee.ts  convertUuid.ts  is-valid-solana-address.ts  network.ts  random-string.ts  sendTransaction.ts  stable-coin.ts
(+228 files in other folders)
