[package]
name = "deorg-voting-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "deorg_voting_program"

[features]
default = ["init-if-needed"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
init-if-needed = ["anchor-lang/init-if-needed"]


[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
sha2 = "0.10.6"
